fixed navbar not collapsing properly (only on index)

--- a/style/style.css
+++ b/style/style.css
@@ -122,37 +122,17 @@ margin-left: 30px;
 
 .rubriquecolor {
 color: white;
-margin-left: 250px;
+margin-left: 235px;
 }
 
 h1,
 h2,
 h3 {
-<<<<<<< HEAD
-    text-align: center;
-=======
 text-align: center;
->>>>>>> friends
 }
 
 .new_offer,
 .filter {
-<<<<<<< HEAD
-    width: 1000px;
-    top: 0;
-    left: 0;
-    margin: auto;
-    display: block;
-    text-align: center;
-}
-
-table.tableoffer {
-    font-family: "Open Sans", sans-serif;
-    background-color: #EEEEEE;
-    width: 100%;
-    text-align: left;
-    border-collapse: collapse;
-=======
 width: 1000px;
 top: 0;
 left: 0;
@@ -167,98 +147,10 @@ background-color: #EEEEEE;
 width: 100%;
 text-align: left;
 border-collapse: collapse;
->>>>>>> friends
 }
 
 table.tableoffer td,
 table.tableoffer th {
-<<<<<<< HEAD
-    padding: 10px 10px;
-}
-
-table.tableoffer tbody td {
-    font-size: 15px;
-}
-
-table.tableoffer tr:nth-child(even) {
-    background: #D0E4F5;
-}
-
-table.tableoffer th {
-    background: #2A9D8F;
-}
-
-table.tableoffer th {
-    font-size: 15px;
-}
-
-.hide {
-    display: none;
-}
-
-textarea {
-    resize: none;
-}
-
-table.disponibilite {
-    background: #f5f5f5;
-    border-collapse: separate;
-    box-shadow: inset 0 1px 0 #fff;
-    font-size: 12px;
-    line-height: 24px;
-    margin: 30px auto;
-    text-align: left;
-    width: 1000px;
-}
-
-.disponibilite th {
-    width: 150px;
-    background: url(https://jackrugile.com/images/misc/noise-diagonal.png), linear-gradient(#777, #444);
-    border-left: 1px solid #555;
-    border-right: 1px solid #777;
-    border-top: 1px solid #555;
-    border-bottom: 1px solid #333;
-    box-shadow: inset 0 1px 0 #999;
-    color: #fff;
-    font-weight: bold;
-    color: #FFFFFF;
-}
-
-table.tableoffer th th:first-child {
-    border-left: none;
-}
-
-table.tableoffer td {
-    font-size: 14px;
-}
-
-table.tableoffer .links {
-    text-align: right;
-}
-
-table.tableoffer .links a {
-    display: inline-block;
-    background: #1C6EA4;
-    color: #FFFFFF;
-    padding: 2px 8px;
-    border-radius: 5px;
-}
-
-.disponibilite td {
-    width: 150px;
-    border-right: 1px solid #fff;
-    border-left: 1px solid #e8e8e8;
-    border-top: 1px solid #fff;
-    border-bottom: 1px solid #e8e8e8;
-    padding: 10px 15px;
-    position: relative;
-    transition: all 300ms;
-}
-
-.disponibilite {
-    background: url(https://jackrugile.com/images/misc/noise-diagonal.png);
-}
-=======
 padding: 10px 10px;
 }
 
@@ -276,12 +168,16 @@ background: #2A9D8F;
 
 table.tableoffer th {
 font-size: 15px;
+}
+
 .hide {
 display: none;
 }
+
 textarea {
 resize: none;
 }
+
 table.disponibilite {
 background: #f5f5f5;
 border-collapse: separate;
@@ -292,6 +188,7 @@ margin: 30px auto;
 text-align: left;
 width: 1000px;
 }
+
 .disponibilite th {
 width: 150px;
 background: url(https://jackrugile.com/images/misc/noise-diagonal.png), linear-gradient(#777, #444);
@@ -304,21 +201,27 @@ color: #fff;
 font-weight: bold;
 color: #FFFFFF;
 }
+
 table.tableoffer th th:first-child {
 border-left: none;
 }
+
 table.tableoffer td {
 font-size: 14px;
 }
+
 table.tableoffer .links {
 text-align: right;
 }
+
 table.tableoffer .links a {
 display: inline-block;
 background: #1C6EA4;
 color: #FFFFFF;
 padding: 2px 8px;
 border-radius: 5px;
+}
+
 .disponibilite td {
 width: 150px;
 border-right: 1px solid #fff;
@@ -329,6 +232,7 @@ padding: 10px 15px;
 position: relative;
 transition: all 300ms;
 }
+
 .disponibilite {
 background: url(https://jackrugile.com/images/misc/noise-diagonal.png);
 }
@@ -371,4 +275,3 @@ display: block;
 .dropdown a:hover {background-color: #ddd;}
 
 .show {display: block;}
->>>>>>> friends
